// Productos concretos (familia Mac)
public class MacButton implements Button {
    public void paint() {
        System.out.println("Botón estilo Mac");
    }
}
