// Productos concretos (familia Mac)
public class MacWindow implements Window {
    public void render() {
        System.out.println("Ventana estilo Mac");
    }
}
