// Productos concretos (familia Windows)
public class WindowsButton implements Button {
    public void paint() {
        System.out.println("Botón estilo Windows");
    }
}
