// Productos abstractos
public interface Button {
    void paint();
}