// Fabrica abstracta

public interface GUIFactory {
    Button createButton();

    Window createWindow();
}
