// Productos abstractos
public interface Window {
    void render();
}
