// Productos concretos (familia Windows)
public class WindowsWindow implements Window {
    public void render() {
        System.out.println("Ventana estilo Windows");
    }
}
